Add sbt-assembly